--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="This is a website Croissant bakery and cafe` it provides services to clients looking for freashly baked croissants to enjoy"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet"  href="/css/style.css"/>
-    <title>Flaky Croissant Fantasy</title>
+    <title>Flaky Croissant Fantasy Bakery & Cafe`</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container-fluid">
-    <img src="/images/sweet-croissant.jpg" class="img-fluid" width="45" class="border border-danger rounded-circle"/>
+    <img src="/images/sweet-croissant.jpg" class="img-fluid" width="45" class="border border-danger" alt="croissant-logo"/>
     <a class="navbar-brand" href="#">Flaky Croissant Fantasy</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,9 +34,9 @@
 </nav>
 
 <h1 class="mt-4 d-center">
-🥐 Flaky Croissant Fantasy Bakery
+🥐 Flaky Croissant Fantasy Bakery & Cafe`
 </h1>
-<img src="/images/croissant.jpg" alt="croissant image"  width="250 d-block" class="croissant-pic" class="img-fluid"/>
+<img src="/images/croissant.jpg" alt="four-croissants"  width="250 d-block" class="croissant-pic" class="img-fluid"/>
     
 <h2>Welcome to "Flaky Croissant Fantasy"</h2>
 <br/>
