--- a/photo.html
+++ b/photo.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="images of croissants that are served at our bakery /cafe`"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet"  href="/css/style.css"/>
-    <title>Photo</title>
+    <title>Sweet and Savory croissants fom the bakery</title>
 </head>
 <body>
     <h1>
@@ -15,10 +16,10 @@
     <div class="container">
     <div class="row">
     <div class="col-sm-6">
-    <img src="/images/sweet-croissant.jpg" class="img-fluid" width="230"/>
+    <img src="/images/sweet-croissant.jpg" class="img-fluid" width="230" alt="croissant-served-with berrys" title="sweet-croissant"/>
     </div>
     <div class="col-sm-6">
-    <img src="/images/savoury-croissant.jpg" class="img-fluid" width="230"/>
+    <img src="/images/savoury-croissant.jpg" class="img-fluid" width="230" alt="savoury-croissant-with-avocado" title="savoury-croissant"/>
     </div>
     </div>
     </div>
